# DSCcreator

./: README.md
DSCcreator/: CMakeLists.txt  Doxyfile  README.md
DSCcreator/examples/: CMakeLists.txt  data_structure_examples.c
DSCcreator/include/: ds_common.h  ds_generator.h  templates.h  utils.h
DSCcreator/scripts/: generate_docs.py  run_tests.py
DSCcreator/src/: ds_cli.c  ds_generator.c
DSCcreator/src/benchmark/: benchmark.c  benchmark.h
DSCcreator/src/templates/: bst.c  bst.h  btree.c  btree.h  graph.c  graph.h  graph_ts.c  graph_ts.h  hashtable.c  heap.c  heap.h  list.c  list.h  queue.c  queue.h  rbtree.c  rbtree.h  skiplist.c  skiplist.h  skiplist_ts.h  stack.c  stack.h  template_registry.c  template_registry.h  trie.c  trie.h
DSCcreator/src/utils/: file_utils.c  string_utils.c
DSCcreator/tests/: CMakeLists.txt  integration_tests.c  test_btree.c  test_generator.c  test_heap.c  test_list.c  test_queue.c  test_rbtree.c  test_skiplist.c  test_trie.c
